# rl4cu

./: .env.example  .gitignore  README.md  pyproject.toml
data/sft/: messages.jsonl  messages_train.jsonl  messages_val.jsonl  verl_sft.jsonl  verl_sft.parquet  verl_sft_train.parquet  verl_sft_val.parquet
data/sft_test/: messages.jsonl  messages_train.jsonl  messages_val.jsonl  verl_sft.jsonl  verl_sft.parquet  verl_sft_train.parquet  verl_sft_val.parquet
data/trajectories/: trajectories_l1_20260630_005115.jsonl  trajectories_l1_20260630_010331.jsonl  trajectories_l1_20260630_012349.jsonl
modal_app/: kernel_eval.py  rl_train.py  sft_train.py
rl4cu/env/: kernelbench.py
rl4cu/reward/: reward_fn.py
scripts/: format_sft_dataset.py  generate_trajectories.py  pi_launch.sh  pi_setup.sh  run_baseline.py
