[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl4cu"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "modal>=1.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "torch>=2.9.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rl4cu*"]
